[package]
name = "rust-monty-comparison"
version = "0.1.0"
authors = ["jiegec <noc@jiegec.ac.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "mulmod"
harness = false