[package]
name = "rust-monty-comparison"
version = "0.1.0"
authors = ["jiegec <noc@jiegec.ac.cn>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.3"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "mulmod"
harness = false
